[package]
name = "imdisable"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Press <C-[> to disable Windows IME."
readme = ".github/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
device_query = "1.1.3"
inputbot = "0.6.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = ["Win32_UI_Input_Ime", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

